# neural-network-transpiler

./: CMakeLists.txt  README.md
cmake/: flatbuffers.cmake  utils.cmake
src/: annc.cc  cpp-gen.cc  cpp-gen.h  dump.cc  dump.h  exception.h  main.cc  model.cc  model.h
src/templates/: jni.tpl  top_nn_cc.tpl  top_nn_h.tpl
